# funnylauncher

./: .gitignore  Cargo.toml  launcher_struct.drawio  project.sublime-project  project.sublime-workspace
locales/: en-US.json  ru-RU.json
src/: lib.rs  main.rs
src/api/: account.rs  auth.rs  mod.rs  news.rs
src/gui/: login_screen.rs  main_screen.rs  message_screen.rs  mod.rs  news_widget.rs  settings_modal.rs  titlebar.rs  update_screen.rs  window_frame.rs
src/launcher/: commands.rs  config.rs  launcher_controller.rs  launcher_update.rs  locale.rs  mod.rs
src/minecraft/: downloader.rs  minecraft_json.rs  mod.rs  tests.rs  validate.rs
src/utils/: constants.rs  log.rs  mod.rs  relaunch.rs
tests_file/: 1.16.5.json
