[package]
name = "funnylauncher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0.1"
egui = "0.24.1"
egui_extras = { version = "0.24.1", features = ["image"] }
eframe = "0.24.1"
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
reqwest = { version = "0.11", features = ["blocking", "stream", "json" ] }
checksumdir = "0.3.0"
unzpack = "0.1"
log = "0.4.20"
log4rs = { version = "1.2.0", features = ["console_appender", "file_appender"] }
msgbox = "0.7.0"
sys-locale = "0.3.1"
